Adicionei a opção do crud de att

--- a/templates/index.html
+++ b/templates/index.html
@@ -115,33 +115,21 @@
       <div class="eventos">
         <h2>Próximos Eventos</h2>
         <div class="evento-conteudo" id="evento-conteudo">
-          
+
         </div>
       </div>
 
       <div class="atualizacoes">
         <h2>Atualizações</h2>
         <div class="cards-atualizacoes">
-          <a href="https://www.instagram.com/voluntariosdasaude36/" target="_blank" rel="noopener noreferrer"
-            class="card-link-wrapper">
+          <a class="card-link-wrapper" href="..." target="_blank">
             <div class="card-atualizacao">
-              <!--<span class="data">28 de fevereiro de 2025</span>-->
-              <img src="{{ url_for('static', filename='adicionais/img_atualizacoes/foto_premiacao.jpeg') }}"
-                alt="Reunião de fevereiro">
-              <p>Joao Moreno Junior, fundador da ONG Voluntarios da Saude, é parabenizado pelo seu esforço em prol de
-                uma nobre causa.</p>
-            </div>
-          </a>
-          <a href="https://www.instagram.com/voluntariosdasaude36/" target="_blank" rel="noopener noreferrer"
-            class="card-link-wrapper">
-            <div class="card-atualizacao">
-              <!--<span class="data">02 de janeiro de 2025</span>-->
-              <img src="{{ url_for('static', filename='adicionais/img_atualizacoes/festa_junina_valor.jpeg') }}"
-                alt="Nova diretoria">
-              <p>Festa Junina em prol da ONG é um sucesso e arrecada R$: 6.430,83.</p>
+              <img src="URL_DA_IMAGEM" />
+              <p>Texto da atualização</p>
             </div>
           </a>
         </div>
+
       </div>
     </section>
 
@@ -227,5 +215,3 @@
   <!-- JS local -->
   <script src="{{ url_for('static', filename='scripts/navbar.js') }}"></script>
   <script src="{{ url_for('static', filename='scripts/index.js') }}"></script>
-
-  
